[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/pause_menu/PauseMenu.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = null

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://GUI/pause_menu/white.stex"

[sub_resource type="Theme" id=4]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.027451, 0.027451, 0.32549 )

[node name="blur" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 3 )
expand = true

[node name="buttonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.5
margin_top = -233.0
margin_right = 215.5
margin_bottom = 233.0

[node name="back" type="Button" parent="buttonContainer"]
margin_left = 115.0
margin_top = 52.0
margin_right = 315.0
margin_bottom = 152.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 6
size_flags_vertical = 14
shortcut_in_tooltip = false
text = "Back To Game"

[node name="restart" type="Button" parent="buttonContainer"]
margin_left = 115.0
margin_top = 182.0
margin_right = 315.0
margin_bottom = 282.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = SubResource( 4 )
shortcut_in_tooltip = false
text = "Restart Level"

[node name="menu" type="Button" parent="buttonContainer"]
margin_left = 115.0
margin_top = 313.0
margin_right = 315.0
margin_bottom = 413.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 6
size_flags_vertical = 2
theme = SubResource( 4 )
shortcut_in_tooltip = false
text = "Main Menu"

[connection signal="draw" from="." to="." method="_on_PauseMenu_draw"]
[connection signal="hide" from="." to="." method="_on_PauseMenu_hide"]
[connection signal="button_up" from="buttonContainer/back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="buttonContainer/restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="buttonContainer/menu" to="." method="_on_menu_button_up"]
